<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="main_text_start">START</string>
    <string name="main_image_description">logo</string>
    <string name="title_exercise">Get Ready</string>
    <string name="timer">10</string>
    <string name="timer_exercise">30</string>
    <string name="tv_exercise_name">Exercise Name</string>
    <string name="tv_upcoming_exercise">Upcoming Exercise</string>
    <string name="tv_item">1</string>
    <string name="finish_end">END</string>
    <string name="finish_description">end</string>
    <string name="tv_title1">You have done the workout!</string>
    <string name="btn_finish">Finish</string>
    <string name="dialog_title">Are you sure?</string>
    <string name="dialog_content">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="dialog_btn_yes">YES</string>
    <string name="dialog_btn_no">No</string>
    <string name="main_text_bmi">BMI</string>
    <string name="main_calculator">Calculator</string>
    <string name="bmi_et_hint_weight">Weight (in kg)</string>
    <string name="bmi_et_hint_height">Height (in cm)</string>
    <string name="bmi_tv_title">Your BMI</string>
    <string name="bmi_tv_value">15.00</string>
    <string name="bmi_tv_type">Normal</string>
    <string name="bmi_tv_description">Description</string>
    <string name="bmi_btn_calculate">Calculate</string>
    <string name="bmi_metrics_units">METRIC UNITS</string>
    <string name="bmi_us_units">US UNITS</string>
    <string name="et_bmi_feet">Feet</string>
    <string name="et_bmi_inch">Inch</string>
    <string name="et_bmi_us_weight">Weight</string>
    <string name="main_history">History</string>
</resources>