<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bmi_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_metric_unit_weight"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bmi_toolbar"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/purple_700"
        app:hintTextColor="@color/purple_700">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_metric_unit_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bmi_et_hint_weight"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_metric_unit_height"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_metric_unit_weight"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/purple_700"
        app:hintTextColor="@color/purple_700">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_metric_unit_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bmi_et_hint_height"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_bmi_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_metric_unit_height"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_your_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bmi_tv_title"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_bmi_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/bmi_tv_value"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_bmi_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/bmi_tv_type"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_bmi_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/bmi_tv_description"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_bmi_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_bmi_result"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/bmi_btn_calculate" />
</RelativeLayout>